package cl.ucn.disc.pa.kanto.pokedex;

/**
 * This interface load the Pokemons used a way of read
 */

public interface PokedexLoader {

    /**
     * Load all pokemons
     */

    void load();

}
