@startuml
!pragma layout smetana
skin rose

left to right direction
set namespaceSeparator none
package cl.ucn.disc.pa.kanto {

    package in.reader {

        interface PokemonReader <<interface>> {
            +read():Pokemon
            +hasNext(): boolean
        }
        class CvsPokemonReader {
            -hasNext true: boolean
            -SEPARATOR_CHARACTER : String
            -EMPTY_STRING : String
            -in: In
            -stringPokemonSerializer: PokemonSerializer

            +CvsPokemonReader(fileName String):
        }


        package seralize {
            class StringPokemonSerializer<String> {
                -SeparatorCharacter: String

                +StringPokemonSerializer(SeparatorCharacter String):
            }

            interface PokemonSerializer <<interface>> {
                + seralize(T adapter):Pokemon
            }
        }

    }

    package pokedex {
        class DefaultPokedex {
            - FILE_NAME : String
            -FIRST_EVOLUTION_PROPERTY : String
            -compoundPokemon: list<Pokemon>

            +DefaultPokedex():

        }
        class DefaultPokedexLoader {
            -pokemonReader: PokemonReader
            -compoundPokemon: List<Pokemon>

            +DefaultPokedexLoader(pokemonReader PokemonReader, compoundPokemon List<Pokemon>):

        }
        interface Pokedex <<interface>>{
            +searchByRangeNumber(int firstLimit, int secondLimit): List<Pokemon>
            +searchAllPokemon(): List<Pokemon>
            +searchAllPokemonByFirstEvolution(): List<Pokemon>
            +searchPokemonByType(String type): List<Pokemon>
            +searchById(int id): Pokemon
            +earchByName(String id): Pokemon

        }
        interface PokedexLoader <<interface>> {
            +load(): void
        }

        package sort {
            class PokemonAlphabeticalComparator {
            }
            class PokemonAscendingComparator {
            }
            class PokemonDescendingComparator {
            }

        }

    }




    package pokemon {
        class Pokemon {
            -id: int
            -name: String
            -stage: String
            -previousEvolution: List<String>
            -nextEvolution: List<String>
            -kindOne: String
            -kindOne: String

            +getId(): int
            +getStage(): String
            +getName(): String
            +getPreviousEvolution(): List<String>
            +getNextEvolution(): List<String>
            +getKindOne(): String
            +getKindTwo(): String

            +newBuilder(): PokemonBuilder


        }
        interface Showable <<interface>> {
            +show: void
        }

        class PokemonBuilder {
            -id: int
            -name: String
            -stage: String
            -previousEvolution: List<String>
            -nextEvolution: List<String>
            -kindOne: String
            -kindOne: String

            + id(id: int): void
            + name(name : String) : void
            + stage(stage : String) : void
            + previousEvolution(previousEvolution : List<String): void
            + nextEvolution(nextEvolution : List<String) : void
            + kindOne(kindOne : String) : void
            + kindTwo(kindTwo : String) : void

            + builder() : Pokemon

        }

    }

}

StringPokemonSerializer ..|> PokemonSerializer
CvsPokemonReader ..|> PokemonReader

DefaultPokedex "1" --* "1" PokedexLoader : Load

DefaultPokedex "1" --o "1" PokemonAlphabeticalComparator
DefaultPokedex "1" --o "1" PokemonAscendingComparator
DefaultPokedex "1" --o "1" PokemonDescendingComparator

DefaultPokedex ..|> Pokedex
DefaultPokedexLoader ..|> PokedexLoader

DefaultPokedex "1" --* "1" PokemonReader : "Read"

Pokemon ..|> Showable

PokemonBuilder "1" -- "1" Pokemon : Build
@enduml